--- a/week01/assignment.ipynb
+++ b/week01/assignment.ipynb
@@ -274,7 +274,7 @@
     "\\end{align*}\n",
     "$$\n",
     "\n",
-    "At some point you'll notice two thigns: first that there is a pattern in the sum and second that the sum has a finite number of terms. For example, when $n=8$ there was 4 terms in the sum.\n",
+    "At some point you'll notice two things: first that there is a pattern in the sum and second that the sum has a finite number of terms. For example, when $n=8$ there was 4 terms in the sum.\n",
     "These two hints together with the fact that $f(n)=n$ for mergesort, should lead you to the required proof.\n",
     "\n",
     "## What to submit\n",
