--- a/week01/assignment.ipynb
+++ b/week01/assignment.ipynb
@@ -267,10 +267,10 @@
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "T(n) &= 2T(n/2)+f(n) \\\\ \n",
-    "     &= 2\\left[ 2T(n/4) + f(n/2) \\right] + f(n) \\\\\n",
-    "     &= 2\\left[ 2\\left[2T(n/8)+f(n/4)\\right] + f(n/2) \\right] + f(n) \\\\\n",
-    "     &= 2\\left[ 2\\left[2\\left[2T(n/16)+f(n/8)\\right]+f(n/4)\\right] + f(n/2) \\right] + f(n)\n",
+    "T(n) &= 2T\\!\\left(\\frac{n}{2}\\right) + f(n) \\\\[4pt]\n",
+    "     &= 2\\left[ 2T\\!\\left(\\frac{n}{4}\\right) + f\\!\\left(\\frac{n}{2}\\right) \\right] + f(n) \\\\[4pt]\n",
+    "     &= 2\\left[ 2\\left[ 2T\\!\\left(\\frac{n}{8}\\right) + f\\!\\left(\\frac{n}{4}\\right) \\right] + f\\!\\left(\\frac{n}{2}\\right) \\right] + f(n) \\\\[4pt]\n",
+    "     &= 2\\left[ 2\\left[ 2\\left[ 2T\\!\\left(\\frac{n}{16}\\right) + f\\!\\left(\\frac{n}{8}\\right) \\right] + f\\!\\left(\\frac{n}{4}\\right) \\right] + f\\!\\left(\\frac{n}{2}\\right) \\right] + f(n)\n",
     "\\end{align*}\n",
     "$$\n",
     "\n",
