Update assignment title in solution notebook

--- a/week01/solution.ipynb
+++ b/week01/solution.ipynb
@@ -5,7 +5,7 @@
    "id": "5b5cf9ec",
    "metadata": {},
    "source": [
-    "# Assignment 01: quantitative analysis of mergesort\n"
+    "# Assignment 01 solution: quantitative analysis of mergesort\n"
    ]
   },
   {
