--- a/week03/assignment.ipynb
+++ b/week03/assignment.ipynb
@@ -5,278 +5,153 @@
    "id": "70d48a2d",
    "metadata": {},
    "source": [
-    "# Assignment 02\n",
+    "# Assignment 03\n",
     "\n",
     "\n",
-    "Recursion for divide and conquer is covered in [chapter 1](https://jeffe.cs.illinois.edu/teaching/algorithms/book/01-recursion.pdf) of Jeff Erickson's book.\n",
+    "## Reading\n",
     "\n",
-    "Additional readings include\n",
-    "\n",
-    "- [Karatsuba's original paper](./OER/karatsuba1962.pdf) from 1962 (in Russian, but the math is almost readable).\n",
-    "\n",
-    "- A [1995 reflection by Karatsuba about his technique](./OER/karatsuba1995.pdf). Section 6 describes how the result of $\\mathcal O (n^{\\log_23})$ became known.\n",
-    "\n",
-    "- [A general method for solving divide and conquer recurrences](./OER/Bentley1978.pdf) is the original proof from 1978 of what is known today as a _Master Theorem._\n",
+    "- [Basic Graph Algorithms](https://jeffe.cs.illinois.edu/teaching/algorithms/book/05-graphs.pdf) from Jeff Erikson's book.\n",
+    "- [Leo's short article on the 100th anniversary of Borůvka](https://medium.com/@leoirakliotis/borůvka-at-100-146912e19ad3)\n",
     "\n",
     "\n",
-    "## Divide-and-conquer multiplication\n",
+    "## Vertex reachability and counting components\n",
     "\n",
-    "Multiplying large numbers has been, historically, a challenging task for computers. Early computers, operating on 8-bit architectures could handle integers in the interval $[-128. 127]$. In general, we expect a computer with a $b$-bits architecture to handle up to $2^b$ integers; or spread between negative and positive values to cover the interval $[-2^{b-1}, 2^{b-1}-1]$.\n",
     "\n",
-    "Consider two integer numbers $x$ and $y$ with the same number of digits (for example $x=1234$ and $y=5678$). Furthermore, we'll assume that the number of digits these numbers have is a power of 2. Any such number can be written as\n",
+    "![](https://raw.githubusercontent.com/lgreco/images/refs/heads/main/graphs/undirected_multi_component.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96dbbc45",
+   "metadata": {},
+   "source": [
+    "Given a graph $G=(V,E)$ and a starting vertex $s\\in V$ find the set $\\mathcal R$ of all vertices in $G$ that can be reached from $s$. We expect $\\mathcal R\\subseteq V$ and $\\mathcal R = \\{ r: r\\in V\\ \\text{and}\\ \\forall u\\in V,\\, \\exists r\\rightsquigarrow u\\}$. The notation $r\\rightsquigarrow u$ means that there is a path from vertex $r$ to vertex $u$.\n",
+    "\n",
+    "Set $\\mathcal R$ can be computed as follows.\n",
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "x & = a10^m + b \\\\\n",
-    "y & = c10^m + d\n",
+    "& \\textbf{reachability}(s, V, E): \\\\\n",
+    "& \\quad \\mathcal R \\leftarrow \\varnothing \\\\\n",
+    "& \\quad S = \\{s\\} \\\\\n",
+    "& \\quad \\textbf{while}\\ S\\neq\\varnothing\\\\\n",
+    "& \\quad\\quad u \\leftarrow\\ \\text{remove an element from}\\ S \\\\\n",
+    "& \\quad\\quad \\mathcal R \\leftarrow \\mathcal R \\cup \\{u\\} \\\\\n",
+    "& \\quad\\quad \\forall (u,v)\\in E: \\\\\n",
+    "& \\quad\\quad\\quad \\textbf{if}\\ \\{u\\}\\cap R = \\varnothing \\\\\n",
+    "& \\quad\\quad\\quad\\quad S \\leftarrow S\\cup \\{v\\} \\\\\n",
+    "& \\quad \\textbf{return}\\ \\mathcal R\n",
     "\\end{align*}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a75801d",
+   "metadata": {},
+   "source": [
+    "The algorithm above is intentionally mathematical but everything is familiar.\n",
+    "\n",
     "$$\n",
+    "\\begin{align*}\n",
+    "& \\textbf{reachability}(s, V, E): &&  \\\\\n",
+    "& \\quad \\mathcal R \\leftarrow \\varnothing && \\textsf{\\color{blue}Initialize the set of reachable vertices} \\\\\n",
+    "& \\quad S = \\{s\\} && \\textsf{\\color{blue}Prime a scratch pad with places to visit next} \\\\\n",
+    "& \\quad \\textbf{while}\\ S\\neq\\varnothing && \\textsf{\\color{blue}Repeat while there are places to visit next} \\\\\n",
+    "& \\quad\\quad u \\leftarrow\\ \\text{remove an element from}\\ S && \\quad \\textsf{\\color{blue}Pick a place} \\\\\n",
+    "& \\quad\\quad \\mathcal R \\leftarrow \\mathcal R \\cup \\{u\\} && \\quad \\textsf{\\color{blue}Add the picked place to set }{\\color{blue}\\mathcal R} \\\\\n",
+    "& \\quad\\quad \\forall (u,v)\\in E: && \\quad \\textsf{\\color{blue}For every neighbor of the picked place} \\\\\n",
+    "& \\quad\\quad\\quad \\textbf{if}\\ \\{u\\}\\cap R = \\varnothing && \\quad \\textsf{\\color{blue}If neighbor not visited yet} \\\\\n",
+    "& \\quad\\quad\\quad\\quad S \\leftarrow S\\cup \\{v\\} && \\quad \\textsf{\\color{blue}Add neighbor to places to visit next} \\\\\n",
+    "& \\quad \\textbf{return}\\ \\mathcal R && \\textsf{\\color{blue}Done} \n",
+    "\\end{align*}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db53a18b",
+   "metadata": {},
+   "source": [
+    "When it's time to implement $\\textbf{reachability}(s,V,E)$, sets $\\mathcal R$ and $\\mathcal S$ can be represented with plain arrays (or Python lists). In this context, set unions are executed as `list.append` statements. Testing of intersection, finally, is the equivalent of testing for membership (`not in` operation)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaa90928",
+   "metadata": {},
+   "source": [
     "\n",
-    "Where $m=\\lceil\\log_{10} x\\rceil/2$. For example, $\\lceil\\log_{10} 1234\\rceil = 4$ and in this case, $m=2$. The _ceiling_ operator $\\lceil\\cdot\\rceil$ in Python is implemented by the function `math.ceil`.\n",
+    "---\n",
     "\n",
-    "The terms $a,b,c$ and $d$ can be obtained by splitting $x$ and $y$ in left and right halves. This is easy to accomplish when the numbers are represented as strings of digits. For example:\n"
+    "### Task 1: implement $\\textbf{reachability}(s,V,E)$\n",
+    "\n",
+    "Write a function\n",
+    "\n",
+    "```python\n",
+    "reachability(s: int, G: list[list[int]]) -> list\n",
+    "```\n",
+    "\n",
+    "that returns a list of all vertices in a graph $G=(V,E)$ reachable from vertex $s$. In the function header above `G` is the adjacency matrix representing the graph $G$.\n",
+    "\n",
+    "Your code must be neat and well documented, demonstrating your best qualities as a coder.\n",
+    "\n",
+    "Test your code with the adjacency matrix below. Calling\n",
+    "\n",
+    "```python\n",
+    "reachability(3, graph)\n",
+    "```\n",
+    "should return the list `[3,0,6,5,1]` (maybe not in that order but it doesn't matter because this is actually the set $\\mathcal R$ we discussed earlier, and order isn't imporant.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1e650176",
+   "execution_count": null,
+   "id": "801c99cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = \"1234\"\n",
-    "y = \"5678\"\n",
-    "m = len(x) // 2\n",
-    "a = x[:m]\n",
-    "b = x[m:]\n",
-    "c = y[:m]\n",
-    "d = y[m:]"
+    "# fmt: off\n",
+    "\n",
+    "\n",
+    "graph = [\n",
+    "    # 0  1  2  3  4  5  6  7\n",
+    "    [ 0, 0, 0, 1, 0, 0, 1, 0],  # vertex 0\n",
+    "    [ 0, 0, 0, 0, 0, 1, 0, 0],  # vertex 1\n",
+    "    [ 0, 0, 0, 0, 1, 0, 0, 0],  # vertex 2\n",
+    "    [ 1, 0, 0, 0, 0, 1, 0, 0],  # vertex 3\n",
+    "    [ 0, 0, 1, 0, 0, 0, 0, 0],  # vertex 4\n",
+    "    [ 0, 1, 0, 1, 0, 0, 0, 0],  # vertex 5\n",
+    "    [ 1, 0, 0, 0, 0, 0, 0, 0],  # vertex 6\n",
+    "    [ 0, 0, 0, 0, 0, 0, 0, 0]   # vertex 7\n",
+    "]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "71382145",
+   "id": "4d05381a",
    "metadata": {},
    "source": [
-    "String representation is one option for numbers so big that cannot be represented by a languages data types. Another option is to use a list of digits, for example: `x=[1,2,3,4]` and `y=[5,6,7,8]`. Splitting these lists in left and right halves, is also easy to do in python. In fact, the code will be the same as above (except for the first two lines, of course).\n",
+    "---\n",
     "\n",
-    "Using the split form for $x$ and $y$, their product can be written as\n",
+    "### Task 2: counting components\n",
     "\n",
-    "$$\n",
-    "xy = ac10^{2m} + (ad+bc)10^m + bd\n",
-    "$$\n",
-    "\n",
-    "The expression above \"reduces\" the product of two big numbers into four products of smaller numbers. For example,\n",
-    "\n",
-    "$$\n",
-    "1234 \\times 5678\n",
-    "=\n",
-    "12 \\times 56 \\times 10^4\n",
-    "+\n",
-    "\\left(12 \\times 78 + 34 \\times 56\\right) \\times 10^2\n",
-    "+\n",
-    "34 \\times 78\n",
-    "$$\n",
-    "\n",
-    "We can apply the same process to the smaller products, ending up with single digit multiplications, which are easy to do, and multiplications with powers of 10 which are also easy to do as they only require shifting the number the left and padding with 0 to the right:\n",
-    "\n",
-    "$$\n",
-    "\\begin{align*}\n",
-    "12 \\times 56 & = 1 \\times 5 \\times 10^2 + (1 \\times 6 + 2 \\times 5) \\times 10 + 2 \\times 6 \\\\\n",
-    "             & = 5 \\times 10^2 + 16 \\times 10 + 12 \\\\\n",
-    "             & = 500 + 160 + 12 \\\\\n",
-    "             & = 672 \\\\ \\\\\n",
-    "12 \\times 78 & = 1 \\times 7 \\times 10^2 + (1 \\times 8 + 2 \\times 7) \\times 10 + 2 \\times 8 \\\\\n",
-    "             & = 936 \\\\ \\\\\n",
-    "34 \\times 56 & = 3 \\times 5 \\times 10^2 + (3 \\times 6 + 4 \\times 5) \\times 10 + 4 \\times 6 \\\\\n",
-    "             & = 1904 \\\\ \\\\\n",
-    "34 \\times 78 & = 3 \\times 7 \\times 10^2 + (3 \\times 8 + 4 \\times 7) \\times 10 + 4 \\times 8 \\\\\n",
-    "             & = 2652\n",
-    "\\end{align*}\n",
-    "$$\n",
-    "\n",
-    "Substituting these values to the previous expression we get\n",
-    "\n",
-    "$$\n",
-    "\\begin{align*}\n",
-    "1234 \\times 5678 & = 12 \\times 56 \\times 10^4\n",
-    "                   + \\left(12 \\times 78 + 34 \\times 56\\right) \\times 10^\n",
-    "                   + 34 \\times 78 \\\\\n",
-    "                 & = 672 \\times 10^4 + (936+1904) \\times 10^2 + 2652 \\\\\n",
-    "                 & = 672 \\times 10^4 + 2840 \\times 10^2 + 2652 \\\\\n",
-    "                 & = 6720000 +284000 + 2652 \\\\\n",
-    "                 & = 7006652\n",
-    "\n",
-    "\\end{align*}\n",
-    "$$\n",
-    "\n",
-    "The code below implements this recursive multiplication using strings to represent integer numbers.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "bb7e1a1f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12 * 34 = 408  (ok=True)\n",
-      "99 * 99 = 9801  (ok=True)\n",
-      "0123 * 0456 = 56088  (ok=True)\n",
-      "1234 * 5678 = 7006652  (ok=True)\n",
-      "0000 * 0000 = 0  (ok=True)\n",
-      "1111 * 0001 = 1111  (ok=True)\n",
-      "1234567890123456 * 9876543210123456 = 12193263112635260231976841383936  (ok=True)\n",
-      "12345678901234561234567890123456 * 12345678901234561234567890123456 = 152415787532388203170249644871236061576303002601726870921383936  (ok=True)\n",
-      "1234567890123456123456789012345612345678901234561234567890123456 * 1234567890123456123456789012345612345678901234561234567890123456 = 1524157875323882031702496448712391098920536503657902759142813607364731048132908548544433921658436061576303002601726870921383936  (ok=True)\n"
-     ]
-    }
-   ],
-   "source": [
-    "def add_strints(x: str, y: str) -> str:\n",
-    "    \"\"\"\n",
-    "    Add two nonnegative integer strings by converting to int.\n",
-    "    This method can be rewritten as a sum/carry adder for a\n",
-    "    single digit addition, pulling characters from the\n",
-    "    input strings. For simplicity now, we just convert the\n",
-    "    whole string to integer, do the addition, and then\n",
-    "    convert the number back to string.\n",
-    "    \"\"\"\n",
-    "    return str(int(x) + int(y))\n",
-    "\n",
-    "\n",
-    "def simple_recursive_multiplication(x: str, y: str) -> str:\n",
-    "    \"\"\"\n",
-    "    Recursive multiplication for nonnegative integer strings.\n",
-    "    Assumptions:\n",
-    "      - len(x) == len(y)\n",
-    "      - len(x) is a power of two\n",
-    "      - x and y contain only digits\n",
-    "    Uses:\n",
-    "      xy = ac*10^n + (ad+bc)*10^(n/2) + bd\n",
-    "    \"\"\"\n",
-    "    # Number of digits in x, y\n",
-    "    n = len(x)\n",
-    "    # Base case\n",
-    "    if n == 1:\n",
-    "        return str(int(x) * int(y))\n",
-    "    # Middle of x, y for splitting them in left/right halves\n",
-    "    m = n // 2\n",
-    "    # Divide x, y into left/right halves\n",
-    "    a = x[:m]\n",
-    "    b = x[m:]\n",
-    "    c = y[:m]\n",
-    "    d = y[m:]\n",
-    "    # Compute the partial solution\n",
-    "    ac = simple_recursive_multiplication(a, c)\n",
-    "    ad = simple_recursive_multiplication(a, d)\n",
-    "    bc = simple_recursive_multiplication(b, c)\n",
-    "    bd = simple_recursive_multiplication(b, d)\n",
-    "    # Conquer the partial solutions\n",
-    "    ad_plus_bc = add_strints(ad, bc)\n",
-    "    # Multiply by powers of 10 via appending zeros (string shift).\n",
-    "    term1 = ac + (\"0\" * n)\n",
-    "    term2 = ad_plus_bc + (\"0\" * m)\n",
-    "    # Final sum (Using int conversion for addition to keep things simple)\n",
-    "    return str(int(term1) + int(term2) + int(bd))\n",
-    "\n",
-    "\n",
-    "# --- quick sanity checks ---\n",
-    "if __name__ == \"__main__\":\n",
-    "    tests = [\n",
-    "        (\"12\", \"34\"),\n",
-    "        (\"99\", \"99\"),\n",
-    "        (\"0123\", \"0456\"),\n",
-    "        (\"1234\", \"5678\"),\n",
-    "        (\"0000\", \"0000\"),\n",
-    "        (\"1111\", \"0001\"),\n",
-    "        (\"1234567890123456\", \"9876543210123456\"),\n",
-    "        (\"12345678901234561234567890123456\", \"12345678901234561234567890123456\"),\n",
-    "        (\"1234567890123456123456789012345612345678901234561234567890123456\", \"1234567890123456123456789012345612345678901234561234567890123456\"),\n",
-    "    ]\n",
-    "\n",
-    "    for x, y in tests:\n",
-    "        # Compare against Python int multiplication for correctness.\n",
-    "        got = simple_recursive_multiplication(x, y)\n",
-    "        want = str(int(x) * int(y))\n",
-    "        print(f\"{x} * {y} = {got}  (ok={got == want})\")"
+    "Using the `reachability` computation as a start, develop a strategy to count the components of a graph. For example, in `graph` above, there are 3 components. Your findings can be expressed as a separate method that returns the number of components, or a formally stated algorithm (using the formalist of $\\textbf{reachability}(s,V,E)$)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8134c3c8",
+   "id": "acad5673",
    "metadata": {},
    "source": [
-    "The technique above divides a problem of size $n$ into four subproblems of size $n/2$. Assembling the partial solutions is done in about $n$ steps (just adding the partial products). Therefore, the recursion pattern is described by:\n",
     "\n",
-    "$$\n",
-    "T(n) = 4T(n/2) + n\n",
-    "$$\n",
+    "---\n",
     "\n",
-    "And so we have $r=4$, $c=2$, and $d=1$. Therefore, $r>c^d$, and $T(n)\\in\\mathcal O(n^{\\log_cr})$. Here, $\\log_cr=\\log_24=2$ and so the multiplication technique above performs in $\\mathcal O(n^2)$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18b068e2",
-   "metadata": {},
-   "source": [
-    "## Karatsuba's improvement\n",
+    "### What to submit\n",
     "\n",
-    "In the early 1960s, Anatoly Karatsuba noticed that one of the sum of products in the recursive formula can be rewritten. Specifically:\n",
+    "A file called `week03.py` if your code is in Python, or `week03.java` if your code is in Java, etc. This file should contain the code for both tasks.\n",
     "\n",
-    "$$\n",
-    "\\begin{align*}\n",
-    "ad+bc & = ad+bc+(ac-ac)+(bd-bd) && (\\text{add couple of zeros, no harm done}) \\\\\n",
-    "      & = ad+ac+bc+bd-ac-bd && (\\text{reorder the terms}) \\\\\n",
-    "      & = a(d+c) +b(c+d)-ac-bd && (\\text{factorize the products}) \\\\\n",
-    "      & = (a+b)(c+d)-ac-bd && (\\text{factorize again})\n",
-    "\\end{align*}\n",
-    "$$\n",
-    "\n",
-    "Using this conversion, the recursive product can be rewritten:\n",
-    "\n",
-    "$$\n",
-    "\\begin{align*}\n",
-    "xy & = ac10^{2m} + (ad+bc)10^m + bd \\\\\n",
-    "   & = ac10^{2m} + ((a+b)(c+d)-ac-bd)10^m + bd\n",
-    "\\end{align*}\n",
-    "$$\n",
-    "\n",
-    "In this form, there are only three products to compute $ac$, $bd$, and $(a+b)(c+d)$. The rest of the operations are additions (and subtractions) which are trivial. The recursive pattern with Karatsuba's substitution becomes $T(n)=3T(n/2)+n$. Here also $r>c^d$ and the multiplication requires $\\mathcal O(n^{\\log_cr})$. With $c=2$ and $r=3$ the time requirement is $\\mathcal O(n^{1.58})$. This is a substantial improvement over $n^2$. To demonstrate the improvement, consider the multiplication of two numbers with $n=1024$ digits. Using the simple verion, with four recursive calls, the multiplication will take about 1,048,576 steps. With Karatsuba's improvement it will require $59,049$ steps."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0445977d",
-   "metadata": {},
-   "source": [
-    "## Assignment\n",
-    "\n",
-    "Using `simple_recursive_multiplication` as a starting point, write a method to multiply two numbers, represented as strings, using the Karatsuba improvement. For simple arithmetic operations (additions and substractions) you may convert strings to integers, perform the operation, and return the result to string form. For example,\n",
-    "\n",
-    "```python\n",
-    "difference = str(int(\"1234\")-int(\"234\"))\n",
-    "```\n",
-    "should produce the string `'1000'`.\n",
-    "\n",
-    "Use the testing code from earlier to ensure that your Karatsuba multiplications work correctly.\n",
-    "\n",
-    "Then conduct side-by-side comparisons measuring how long it takes to multiply numbers with the simple technique and the Karatsuba technique. Comment on your finding for different sized numbers ranging in lengths from $n=4$ to $n=2048$, doubling the size each time (to maintain a power-of-2 number of digits).\n",
-    "\n",
-    "Also discuss how to modify the code so that it can handle strings of different length and strings whose lengths are not powers-of-2.\n",
-    "\n",
-    "(To time code performance, consider using Python's [`time` module](https://docs.python.org/3/library/time.html)).\n",
-    "\n",
-    "### What to submit:\n",
-    "\n",
-    "* **Either** a Jupyter notebook with your code, your results, and your observations \n",
-    "* **or** a `.py` file with your code and a PDF file with your results and observations. You may also provide a link to a GitHub repository containing your work.\n",
-    "\n",
-    "If you chose the `py`/PDF option, you must upload your files on Sakai. If you are submitting a Jupyter notebook, it's better to provide a link to it (paste it in Sakai) instead of uploading an `.ipynb` file. If you prefer to work on a language other than Python, please upload to Sakai a file with your source code and a PDF with your results and observations (links to GitHub repositories also acceptable instead of uploads.)"
+    "If you chose the formal statement for the second task, submit it as a separate PDF attachement."
    ]
   }
  ],
