--- a/week04/live_coding.ipynb
+++ b/week04/live_coding.ipynb
@@ -41,7 +41,45 @@
    "source": [
     "## Tense edge\n",
     "\n",
-    "![](https://github.com/lgreco/images/blob/main/graphs/tense_edge.jpg)"
+    "An example of a tense edge is shown below. The graph shows two routes from Chicago to Springfield. As we are searching for the shortest route we may, temporarily, believe that the route via Bradley, Urbana, and Decature, at 230 miles, is the shortest one. In the meantime we have also found the shortest route from Chicago to Lincoln, at 170 miles. And we know that the edge from Lincoln to Springfield is 30 miles.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cc60d64",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "<center>\n",
+    "\n",
+    "![](../images/tense_edge.png)\n",
+    "\n",
+    "*Left: a graph illustrating a tense edge on a simple road map. Right: the same graph with vertex labels replaced by integer values. The legend to the left becomes a look up table to the right, matching integer and text labels.*\n",
+    "\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cfe08ef",
+   "metadata": {},
+   "source": [
+    "The edge from `LCN` (Lincoln) to `SPI` (Springfield) is a **tense edge.** Because:\n",
+    "\n",
+    "* One of its vertices is the terminus of a known shortest path (in this case Chicago-to-Lincon, at 170 miles).\n",
+    "* Its other vertex is a vertex for which we already have a shortest path (in this case the 230 miles from Chicago to Springfield, via Bradley, Urbana, and Decatur).\n",
+    "* The tense edge, together with the shortest path leading to it, form a *shorter* path to Springfield than the current shortest path to it.\n",
+    "\n",
+    "In more abstract terms: if $d(v)$ is the shortest path distance from the source vertex $s$ to another vertex $v$ and there is an edge $(u,v)$ with weight $w_{uv}$ such that:\n",
+    "\n",
+    "$$\n",
+    "d(v) > d(u) + w_{uv}\n",
+    "$$\n",
+    "\n",
+    "then the edge $(u,v)$ is tense."
    ]
   }
  ],
