--- a/week04/assignment.ipynb
+++ b/week04/assignment.ipynb
@@ -5,16 +5,14 @@
    "id": "70d48a2d",
    "metadata": {},
    "source": [
-    "# Assignment 04\n",
-    "\n",
+    "# Assignment 04: Single-source shortest path\n",
     "\n",
     "## Reading\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Single-source shortest path\n",
-    "\n"
+    "- [Chapter 8](https://jeffe.cs.illinois.edu/teaching/algorithms/book/08-sssp.pdf) from Jeff Erickson's book.\n",
+    "- [Dijkstra's paper on SSPP](./dijkstra_sssp.pdf)\n",
+    "- [An interview with E W Dijkstra](./acm_dijkstra.pdf)\n",
+    "- [Recent research result improving SSSP](https://arxiv.org/pdf/2504.17033)\n"
    ]
   },
   {
@@ -22,7 +20,154 @@
    "id": "96dbbc45",
    "metadata": {},
    "source": [
-    "Given a graph $G=(V,E)$ and a starting vertex $s\\in V$ find "
+    "For this assignment we'll look at a _directed acyclic graph_ also known as a **dag.** The graph is abstracted like any other graph as a pair of a set of vertices and a set of edges: $G=(V,E)$. In an undirected graph,\n",
+    "\n",
+    "$$\n",
+    "\\forall u, v\\in V: (u,v)\\in E \\Leftrightarrow (v,u)\\in E\n",
+    "$$\n",
+    "\n",
+    "In terms of the adjacency matrix $\\mathbf G$,\n",
+    "\n",
+    "$$\n",
+    "\\mathbf G_{uv} = \\mathbf G_{vu},\\ \\forall u,v\\in V\n",
+    "$$\n",
+    "\n",
+    "For a _dag,_ there is at least one pair of vertices such that\n",
+    "\n",
+    "$$\n",
+    "\\exists u, v \\in V: (u,v)\\in E\\Leftrightarrow (v,u)\\not\\in E\n",
+    "$$\n",
+    "\n",
+    "Otherwise, the representation of a _dag_ is the same as the representation of an undirected graph. The only difference is that in an undirected graph it is sufficient to explore about about half the adjacency matrix because of its symmetry. In the dag, we must explore every value in the matrix (except the main diagonal).\n",
+    "\n",
+    "In the Single-Source Shortest Path (SSSP) problem, we are given a dag $G=(V,E)$ and a source vertex $s\\in V$, and we must find the shortest distances $d(u)$ from $s$ to every vertex $u\\in V$.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5899ac58",
+   "metadata": {},
+   "source": [
+    "Let's try it on a simple graph, using vertex 0 as source. The figure below shows one of the shortest paths, to illustrate the concept. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "512072ce",
+   "metadata": {},
+   "source": [
+    "![](https://raw.githubusercontent.com/lgreco/images/refs/heads/main/graphs/dag_sssp.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38b0c435",
+   "metadata": {},
+   "source": [
+    "As we discussed in class, the distances can be computed as follows.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "042117e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fmt: off\n",
+    "\n",
+    "def sssp(s, G):\n",
+    "    n: int = len(G)                         # Shortcut to size of graph\n",
+    "    no_edge = G[0][0]                       # Shortcut to absence of edge\n",
+    "    oo = float(\"inf\")                       # Shortcut to infinity\n",
+    "    d: list = [oo for _ in range(n)]        # Assume looooong distances\n",
+    "    d[s] = 0                                # Source distance to itself\n",
+    "    bag = [s]                               # Start from source\n",
+    "    while len(bag) > 0:                     # While bag not empty\n",
+    "        u = bag.pop()                       # Take a vertex out of bag\n",
+    "        for v in range(n):                  # Find u's neighbors\n",
+    "            if G[u][v] != no_edge:          # There is an edge (u,v)\n",
+    "                if d[v] > d[u] + G[u][v]:   # Is edge (u,v) tense?\n",
+    "                    d[v] = d[u] + G[u][v]   # Relax the edge\n",
+    "                    bag.append(v)           # Explore v next\n",
+    "    return d                                # Shortest path distances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "627e40ed",
+   "metadata": {},
+   "source": [
+    "The code above is far from perfect but it works as long as there are no cycles in the graph. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "43e1edb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fmt: off\n",
+    "graph = [\n",
+    "    #0   1   2   3   4   5   6   7\n",
+    "    [0,  5,  1,  5, 10,  0,  0,  0],  # 0\n",
+    "    [0,  0, 12,  5,  5,  0,  0,  0],  # 1\n",
+    "    [0,  0,  0,  1,  0,  0,  5,  0],  # 2\n",
+    "    [0,  0,  0,  0,  0,  1,  5,  0],  # 3\n",
+    "    [0,  0,  0,  6,  0,  5,  0,  5],  # 4\n",
+    "    [0,  0,  0,  0,  0,  0,  1,  5],  # 5\n",
+    "    [0,  0,  0,  0,  0,  0,  0,  1],  # 6\n",
+    "    [0,  0,  0,  0,  0,  0,  0,  0],  # 7\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3ee3af22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 5, 1, 2, 10, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sssp(0,graph))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10d18b93",
+   "metadata": {},
+   "source": [
+    "### Part 1:\n",
+    "\n",
+    "The code above produces a list `d` with the shortest path distances from a source vertex $s$ to any vertex in the graph. \n",
+    "\n",
+    "Write a method with the following header\n",
+    "\n",
+    "```python\n",
+    "reconstruct(d: list[int], s: int, graph: list[list[int]]) -> list[int]\n",
+    "```\n",
+    "\n",
+    "that returns a list of `p` such that `p[u]` is the predecessor of `u` in the shortedt path from the source vertex (`s`) to `u`. For the source vertex we accept `p[s]=None`. Using the earlier graph as an example, we'll have the following values:\n",
+    "\n",
+    "```python\n",
+    "p[0]: None\n",
+    "p[1]: 0\n",
+    "p[2]: 0\n",
+    "p[3]: 2\n",
+    "p[4]: 0\n",
+    "p[5]: 3\n",
+    "p[6]: 5\n",
+    "p[7]: 6\n",
+    "```"
    ]
   }
  ],
