--- a/week04/assignment.ipynb
+++ b/week04/assignment.ipynb
@@ -69,8 +69,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "acc7b6be",
+   "metadata": {},
+   "source": [
+    "\n",
+    "----\n",
+    "### Codebase"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "042117e7",
    "metadata": {},
    "outputs": [],
@@ -91,29 +101,13 @@
     "                if d[v] > d[u] + G[u][v]:   # Is edge (u,v) tense?\n",
     "                    d[v] = d[u] + G[u][v]   # Relax the edge\n",
     "                    bag.append(v)           # Explore v next\n",
-    "    return d                                # Shortest path distances"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "627e40ed",
-   "metadata": {},
-   "source": [
-    "The code above is far from perfect but it works as long as there are no cycles in the graph. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "43e1edb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return d                                # Shortest path distances\n",
+    "\n",
     "# fmt: off\n",
     "graph = [\n",
     "    #0   1   2   3   4   5   6   7\n",
     "    [0,  5,  1,  5, 10,  0,  0,  0],  # 0\n",
-    "    [0,  0, 12,  5,  5,  0,  0,  0],  # 1\n",
+    "    [0,  0, 12,  5,  6,  0,  0,  0],  # 1\n",
     "    [0,  0,  0,  1,  0,  0,  5,  0],  # 2\n",
     "    [0,  0,  0,  0,  0,  1,  5,  0],  # 3\n",
     "    [0,  0,  0,  6,  0,  5,  0,  5],  # 4\n",
@@ -121,6 +115,17 @@
     "    [0,  0,  0,  0,  0,  0,  0,  1],  # 6\n",
     "    [0,  0,  0,  0,  0,  0,  0,  0],  # 7\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "627e40ed",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "The code above is far from perfect but it works as long as there are no cycles in the graph. "
    ]
   },
   {
@@ -169,6 +174,8 @@
     "    p[7]: 6\n",
     "```\n",
     "\n",
+    "*Hint:* an edge $u\\rightarrow v$ is in the shortest path from $s$ to $v$ if $d(v) = d(u)+\\mathbf G_{uv}$.\n",
+    "\n",
     "Your best coding skills should shine through this method."
    ]
   },
@@ -185,7 +192,64 @@
     "report_sssp(p: list[int], d: list[int], graph: list[list[int]]) -> None\n",
     "```\n",
     "\n",
-    "that prints the shortest path to every vertex in the graph, from the source vertex. For example, the shortest path to vertex 7 is `0 -> 2 -> 3 -> 5 -> 6 -> 7`"
+    "that prints the shortest path to every vertex in the graph, from the source vertex. For example, the shortest path to vertex 7 is `0 -> 2 -> 3 -> 5 -> 6 -> 7`\n",
+    "\n",
+    "Your best coding skills should shine through this method as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0bdd588",
+   "metadata": {},
+   "source": [
+    "### Part 3: Ungrading\n",
+    "\n",
+    "Review your solutions for the first three assignemnts. Compare your work with the posted solutions ([here](../week01/solution.ipynb) for week 1, [here](../week02/solutions.ipynb) for week 2, and [here](../week03/solutions.ipynb) for week 3).\n",
+    "\n",
+    "There is no point value attached to this exercise. Instead, you are being asked to do something more important: analyze your own thinking.\n",
+    "\n",
+    "For each of the three homework assignments, do the following:\n",
+    "\n",
+    "* Compare your solution to the posted solution\n",
+    "* Focus on approach, structure, and reasoning, not just the final answer.\n",
+    "* If your solution differs but is still correct, say so and explain why.\n",
+    "* Identify mistakes or weaknesses; these may include:\n",
+    "  * Logical errors\n",
+    "  * Incorrect assumptions\n",
+    "  * Gaps in justification\n",
+    "  * Inefficient or unclear reasoning\n",
+    "  * A correct idea that was poorly communicated\n",
+    "  * If you made no mistakes, explain what made your solution solid.\n",
+    "\n",
+    "* Explain what you learned\n",
+    "  * What concept became clearer?\n",
+    "  * Algorithm design technique?\n",
+    "  * What would you do differently if you saw a similar problem again?\n",
+    "\n",
+    "* What not to do\n",
+    "  * Do not simply list differences. \n",
+    "  * Do not write “I understand it now” without explaining what changed.\n",
+    "  * Do not write what you think I want to hear.\n",
+    "  * This is not about apologizing, defending yourself, or re-solving the problem.\n",
+    "  * Honest analysis is more valuable than perfection.\n",
+    "\n",
+    "**Length and format:** About 100-200 words per assignment. Plain text or PDF is fine. Use clear headings like: *Homework 1 Reflection, Homework 2 Reflection, ...*\n",
+    "\n",
+    "**How this is assessed:**  Thoughtful, specific reflections signal engagement and growth. Superficial or perfunctory reflections signal the opposite. Your reflections will be taken into account  when determining your course grade.\n",
+    "\n",
+    "**Final note:** Strong students are not the ones who never make mistakes. They are the ones who recognize patterns in their mistakes and correct them early. This exercise is practice in doing exactly that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9ebedf2",
+   "metadata": {},
+   "source": [
+    "### What to submit\n",
+    "\n",
+    "A file `week04.py` with your code, **including the codebase from above,** uploaded on Sakai.\n",
+    "\n",
+    "If your ungrading is in plain text, you may add it to the end of your `week04.py` file as a *docstring* block. If your ungrading is formatted text, you may upload a PDF file on Sakai as well."
    ]
   }
  ],
