--- a/week04/assignment.ipynb
+++ b/week04/assignment.ipynb
@@ -49,7 +49,7 @@
    "id": "5899ac58",
    "metadata": {},
    "source": [
-    "Let's try it on a simple graph, using vertex 0 as source. The figure below shows one of the shortest paths, to illustrate the concept. "
+    "Let's try it on a simple graph, using vertex 0 as source. The figure below shows the shortest paths, to illustrate the concept. "
    ]
   },
   {
