--- a/week03/solutions.ipynb
+++ b/week03/solutions.ipynb
@@ -169,11 +169,11 @@
     "\\begin{align*}\n",
     "& \\textbf{component count}(V, E): \\\\\n",
     "& \\quad c \\leftarrow 0 \\\\\n",
-    "& \\quad T \\leftarrow \\varnothing \\\\\n",
+    "& \\quad \\mathcal T \\leftarrow \\varnothing \\\\\n",
     "& \\quad \\forall u\\in V\\\\\n",
-    "& \\quad\\quad \\textbf{if}\\ u \\not\\in T \\\\\n",
+    "& \\quad\\quad \\textbf{if}\\ u \\not\\in \\mathcalT \\\\\n",
     "& \\quad\\quad\\quad\\quad c \\leftarrow c+1 \\\\\n",
-    "& \\quad\\quad\\quad\\quad T \\leftarrow V\\cup \\textbf{reachability}(u,V,E) \\\\\n",
+    "& \\quad\\quad\\quad\\quad \\mathcalT \\leftarrow \\mathcal T\\cup \\textbf{reachability}(u,V,E) \\\\\n",
     "& \\quad \\textbf{return}\\ c\n",
     "\\end{align*}\n",
     "$$\n"
